# SQLAlchemy-js-auth

./: .gitignore  README.md  models.py  project.md  pyproject.toml
jsalchemy_authorization/: auth.py  models.py
jsalchemy_authorization/permissions/: permission.py
quasar_authorization/: auth.py  models.py
quasar_authorization/permissions/: base.py  ownership.py  propagation.py
src/jsalchemy_auth/: auth.py  checkers.py  models.py  traversers.py  traversors.py  utils.py
tests/: conftest.py  test_authentication.py  test_basic.py  test_checkers.py  test_db.py  test_init.py  test_objects.py  test_propagation.py  test_queries.py  test_traversors.py  x.py
