[tool.poetry]
name = "sqlalchemy-js-authorization"
version = "0.1.0"
description = ""
authors = ["Giuseppe Di Bona <giusedb@gmail.com>"]
readme = "README.md"
packages = [{include = "jsalchemy_authorization"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
