[tool.poetry]
name = "sqlalchemy-js-authorization"
version = "0.1.1"
description = ""
authors = [
    "Giuseppe Di Bona giusedb@gmail.com"
]
readme = "README.md"
packages = [{include = "jsalchemy_authorization", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
