[project]
name = "sqlalchemy-js-authorization"
version = "0.1.1"
description = "Provide a feature-rich, flexible and performant authorization for SQLAlchemy-based model"
authors = [
    {name="Giuseppe Di Bona", email="giusedb@gmail.com"}
]
readme = "README.md"
[tool.poetry]
packages = [{include = "jsalchemy_auth", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
sqlalchemy-js-web-context = "^0.1"
fakeredis = "^2.31.1"
pytest-asyncio = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
pytest = "^8.3.3"
pytest-asyncio = "^1.1.0"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
